--- a/about-us.html
+++ b/about-us.html
@@ -111,7 +111,7 @@
                             <a href="contact.html">Contact</a>
                         </li>
                         <li>
-                            <a href="tel:+918050035925"><button style="background-color: #F159A2;padding: 10px 20px;border-radius: 20px;color: white;position: relative;top: -12px;">Book An Appoinment</button></a>
+                            <a href="tel:+918050035925"><button class="sm-btn" style="background-color: #F159A2;padding: 10px 20px;border-radius: 20px;color: white;position: relative;top: -12px;">Book An Appoinment</button></a>
                         </li>
                        
                     </ul>
