--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
                             <a href="contact.html">Contact</a>
                         </li>
                         <li>
-                            <a href="tel:+918050035925"><button style="background-color: #F159A2;padding: 10px 20px;border-radius: 20px;color: white;position: relative;top: -12px;">Book An Appoinment</button></a>
+                            <a href="tel:+918050035925"><button class="sm-btn" style="background-color: #F159A2;padding: 10px 20px;border-radius: 20px;color: white;position: relative;top: -12px;">Book An Appoinment</button></a>
                         </li>
 
                     </ul>
@@ -146,7 +146,7 @@
             <div class="contact-items">
                 <div class="row">
 
-                    <div class="col-lg-7 wow address-box fadeInUp bg-cover" style="background-image: url(assets/img/2440x1578.png);">
+                    <div class="col-lg-7 wow address-box fadeInUp bg-cover" style="background-image: url(assets/img/thumb/contact.jpg);">
                         <div class="address-info">
                             <ul>
                                 <li>
