--- a/index-3.html
+++ b/index-3.html
@@ -870,7 +870,7 @@
                                                 <li>Unparalleled expertise</li>
                                             </ul>
                                             <a class="btn btn-md btn-gradient" href="#"><i
-                                                    class="fas fa-angle-right"></i> Make Appoinment</a>
+                                                    class="fas fa-angle-right"></i> Book An Appoinment</a>
                                         </div>
                                     </div>
                                 </div>
