--- a/about-us.html
+++ b/about-us.html
@@ -88,7 +88,7 @@
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
                         <i class="fa fa-bars"></i>
                     </button>
-                    <a class="navbar-brand" href="index-3.html">
+                    <a class="navbar-brand" href="index.html">
                         <img src="assets/img/cclogo.jpeg"  class="logo logo-regular" alt="Logo">
                         <img src="assets/img/cclogo.jpeg" width="252px" class="logo desktop" alt="Logo">
                     </a>
@@ -99,13 +99,13 @@
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
                         <li>
-                            <a href="index-3.html">Home</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li>
                             <a href="about-us.html">About</a>
                         </li>
                         <li>
-                            <a href="departments-2.html">Departments</a>
+                            <a href="departments.html">Departments</a>
                         </li>
                         <li>
                             <a href="contact.html">Contact</a>
@@ -135,7 +135,7 @@
                 <div class="col-lg-8 offset-lg-2">
                     <h1>About Us</h1>
                     <ul class="breadcrumb">
-                        <li><a href="index-3.html"><i class="fas fa-home"></i> Home</a></li>
+                        <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
                         <li  class="active text-dark">About</li>
                     </ul>
                 </div>
