--- a/index-5.html
+++ b/index-5.html
@@ -146,7 +146,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="index.html">Home Version One</a></li>
                                 <li><a href="index-2.html">Home Version Two</a></li>
-                                <li><a href="index-3.html">Home Version Three</a></li>
+                                <li><a href="index.html">Home Version Three</a></li>
                                 <li><a href="index-4.html">Home Version Four</a></li>
                                 <li><a href="index-5.html">Home Version Five <span class="badge">New</span></a></li>
                             </ul>
@@ -163,7 +163,7 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Departments</a>
                             <ul class="dropdown-menu">
                                 <li><a href="departments.html">Department Version One</a></li>
-                                <li><a href="departments-2.html">Department Version Two</a></li>
+                                <li><a href="departments.html">Department Version Two</a></li>
                                 <li><a href="departments-3.html">Department Version Three</a></li>
                                 <li><a href="departments-4.html">Department Version Four</a></li>
                                 <li><a href="department-single.html">Department Single</a></li>
