--- a/doctors.html
+++ b/doctors.html
@@ -118,7 +118,7 @@
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
                         <i class="fa fa-bars"></i>
                     </button>
-                    <a class="navbar-brand" href="index-3.html">
+                    <a class="navbar-brand" href="index.html">
                         <img src="assets/img/logo.png" class="logo" alt="Logo">
                     </a>
                 </div>
@@ -132,7 +132,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="index.html">Home Version One</a></li>
                                 <li><a href="index-2.html">Home Version Two</a></li>
-                                <li><a href="index-3.html">Home Version Three</a></li>
+                                <li><a href="index.html">Home Version Three</a></li>
                                 <li><a href="index-4.html">Home Version Four</a></li>
                                 <li><a href="index-5.html">Home Version Five <span class="badge">New</span></a></li>
                             </ul>
@@ -149,7 +149,7 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Departments</a>
                             <ul class="dropdown-menu">
                                 <li><a href="departments.html">Department Version One</a></li>
-                                <li><a href="departments-2.html">Department Version Two</a></li>
+                                <li><a href="departments.html">Department Version Two</a></li>
                                 <li><a href="departments-3.html">Department Version Three</a></li>
                                 <li><a href="departments-4.html">Department Version Four</a></li>
                                 <li><a href="department-single.html">Department Single</a></li>
