--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@
                                 <div id="tab1" class="tab-pane fade active show">
                                     <div class="row align-center">
                                         <div class="col-lg-5 col-md-12 thumb">
-                                            <img src="assets/img/thumb/intro.jpg" alt="Thumb">
+                                            <img src="assets/img/thumb/aboutccc_01.jpg" alt="Thumb">
                                         </div>
                                         <div class="col-lg-7 col-md-12 info">
                                             <h2>Welcome to<strong> Child Central Clinic </strong></h2>
