--- a/contact.html
+++ b/contact.html
@@ -151,11 +151,11 @@
                             <ul>
                                 <li>
                                     <h5><i class="flaticon-call"></i> Phone</h5>
-                                    <span>+44-20-7328-4499</span>
+                                    <span><a href="tel:+91 8050035925">+91 8050035925</a></span>
                                 </li>
                                 <li>
                                     <h5><i class="flaticon-email"></i> Email</h5>
-                                    <span>info@healdi.com</span>
+                                    <span><a href="mailto: childcentralclinic@gmail.com"> childcentralclinic@gmail.com</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -185,7 +185,7 @@
                                 </div>
                                 <div class="col-lg-12">
                                     <div class="form-group comments">
-                                        <textarea class="form-control" id="comments" name="comments" placeholder="Tell Us About Project *"></textarea>
+                                        <textarea class="form-control" id="comments" name="comments" placeholder="Message"></textarea>
                                     </div>
                                 </div>
                                 <div class="col-lg-12">
