--- a/index.html
+++ b/index.html
@@ -901,7 +901,7 @@
             <div class="col-lg-6 info">
                 <div class="info-box">
                     <h5>Our story</h5>
-                    <h2>Our Doctors <br> Specialize in you.</h2>
+                    <!-- <h2>Our Doctors <br> Specialize in you.</h2> -->
                     <p>
                         Child Central Clinic founded by Dr. Jagdish Chinnappa, Dr. Aruna
                         Jagdish, and Dr. Abhinav Malhotra to provide expert advice, accurate
