--- a/index.html
+++ b/index.html
@@ -1087,7 +1087,7 @@
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
                     <div class="site-heading text-center">
-                        <h2 class="text-white">Why Choose Us ?</h2>
+                        <h2 class="text-white">Why Choose Child Central Clinic ?</h2>
                         <p class="text-white">
                             Trust our expert team for personalized care, advanced technology, and unwavering dedication
                             to your child’s health
