--- a/departments.html
+++ b/departments.html
@@ -154,7 +154,7 @@
                             </div>
                             <div class="info">
                                 <div class="title">
-                                    <i class="flaticon-ophtalmology"></i>
+                                    <!-- <i class="flaticon-ophtalmology"></i> -->
                                     <h4><a>General Pediatrics</a></h4>
                                 </div>
                                 <p>
@@ -172,7 +172,7 @@
                             </div>
                             <div class="info">
                                 <div class="title">
-                                    <i class="flaticon-tooth-1"></i>
+                                    <!-- <i class="flaticon-tooth-1"></i> -->
                                     <h4><a>Pediatric Dentistry</a></h4>
                                 </div>
                                 <p>
@@ -190,11 +190,11 @@
                             </div>
                             <div class="info">
                                 <div class="title">
-                                    <i class="flaticon-paramedic"></i>
-                                    <h4><a href="#">Pediatric Ophthalmology</a></h4>
+                                    <!-- <i class="flaticon-paramedic"></i> -->
+                                    <h4><a href="#" >Pediatric Ophthalmology</a></h4>
                                 </div>
                                 <p>
-                                    Early Detection of eye problem in children is very essential.Occular problems in children can hamper their day to day activities,learning and education,School and in severe cases they may lead to permanent eye damage. Hence we at Child Central clinics offer a wide range of services to diagnose and treat eye problem I. Children such as eye testing ,diagnosis and treatment of any eye problems,prescription of glasses and contact lenses. 
+                                    Early Detection of eye problem in children is very essential.Occular problems in children can hamper their day to day activities,learning and education,School and in severe cases they may lead to permanent eye damage. Hence we at Child Central clinics offer a wide range of services to diagnose and treat eye problem . Children such as eye testing ,diagnosis and treatment of any eye problems,prescription of glasses and contact lenses. 
                                 </p>
                             </div>
                         </div>
@@ -208,8 +208,8 @@
                             </div>
                             <div class="info">
                                 <div class="title">
-                                    <i class="flaticon-broken-bone"></i>
-                                    <h4><a href="#">Pediatric Nutrition</a></h4>
+                                    <!-- <i class="flaticon-broken-bone"></i> -->
+                                    <h4><a href="#" class="p-4">Pediatric Nutrition</a></h4>
                                 </div>
                                 <p>
                                     You are what you Eat. At Child Central clinic we assess your child for nutritional status and any nutritional risks.Based on the parameters we devise and give you dietary plans that will help resolve nutritional issues in your child.We also guide children with food allergies.We help with newborn feeding,lactational problems and pediatric eating disorders.  
@@ -226,8 +226,8 @@
                             </div>
                             <div class="info">
                                 <div class="title">
-                                    <i class="flaticon-kidneys"></i>
-                                    <h4><a href="#">Pediatric Surgery</a></h4>
+                                    <!-- <i class="flaticon-kidneys"></i> -->
+                                    <h4><a href="#" >Pediatric Surgery</a></h4>
                                 </div>
                                 <p>
                                     Our Pediatric Surgery department consults and guides on various pediatric surgical conditions such as congenital anomalies,pediatric urology,pediatric neurosurgery, pediatric,neonatal surgery,pediatric GI surgery. 
@@ -244,7 +244,7 @@
                             </div>
                             <div class="info">
                                 <div class="title">
-                                    <i class="flaticon-samples"></i>
+                                    <!-- <i class="flaticon-samples"></i> -->
                                     <h4><a href="#">⁠Pediatric Dermatology</a></h4>
                                 </div>
                                 <p>
@@ -260,7 +260,7 @@
                             </div>
                             <div class="info">
                                 <div class="title">
-                                    <i class="flaticon-samples"></i>
+                                    <!-- <i class="flaticon-samples"></i> -->
                                     <h4><a href="#">Speech Therapy And Audiology</a></h4>
                                 </div>
                                 <p>
@@ -286,7 +286,7 @@
                             </div>
                             <div class="info">
                                 <div class="title">
-                                    <i class="flaticon-samples"></i>
+                                    <!-- <i class="flaticon-samples"></i> -->
                                     <h4><a href="#">⁠Clinical Psychologist</a></h4>
                                 </div>
                                 <p>
@@ -303,7 +303,7 @@
                             </div>
                             <div class="info">
                                 <div class="title">
-                                    <i class="flaticon-samples"></i>
+                                    <!-- <i class="flaticon-samples"></i> -->
                                     <h4><a href="#">⁠Lab</a></h4>
                                 </div>
                                 <p>
@@ -320,7 +320,7 @@
                             </div>
                             <div class="info">
                                 <div class="title">
-                                    <i class="flaticon-samples"></i>
+                                    <!-- <i class="flaticon-samples"></i> -->
                                     <h4><a href="#">Pharmacy</a></h4>
                                 </div>
                                 <p>
@@ -337,7 +337,7 @@
                             </div>
                             <div class="info">
                                 <div class="title">
-                                    <i class="flaticon-samples"></i>
+                                    <!-- <i class="flaticon-samples"></i> -->
                                     <h4><a href="#">Allergy And Asthma Testing</a></h4>
                                 </div>
                                 <p>
@@ -354,7 +354,7 @@
                             </div>
                             <div class="info">
                                 <div class="title">
-                                    <i class="flaticon-samples"></i>
+                                    <!-- <i class="flaticon-samples"></i> -->
                                     <h4><a href="#">
                                         ⁠Eye Testing</a></h4>
                                 </div>
@@ -372,7 +372,7 @@
                             </div>
                             <div class="info">
                                 <div class="title">
-                                    <i class="flaticon-samples"></i>
+                                    <!-- <i class="flaticon-samples"></i> -->
                                     <h4><a href="#">
                                         ⁠Pediatric Health Check Up</a></h4>
                                 </div>
@@ -390,7 +390,7 @@
                             </div>
                             <div class="info">
                                 <div class="title">
-                                    <i class="flaticon-samples"></i>
+                                    <!-- <i class="flaticon-samples"></i> -->
                                     <h4><a href="#">
                                         
 ⁠Workshops</a></h4>
