--- a/about-us.html
+++ b/about-us.html
@@ -151,7 +151,7 @@
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
                     <div class="site-heading text-center">
-                        <h2>Our Mission , Vision &  Opportunity</h2>
+                        <!-- <h2>Our Mission , Vision &  Opportunity</h2> -->
                       
                     </div>
                 </div>
