--- a/index.html
+++ b/index.html
@@ -965,7 +965,7 @@
 
                             <i> <img src="assets/img/thumb/icon-37.png" alt="" width="40px"></i>
                             <h4>Please note</h4>
-                            <p style="padding-bottom: 180px;">
+                            <p class="pd-cust">
                                 Overwhelming and conflicting information about child
                                 care on the internet can lead to confusion, which is why our child
                                 doctors and specialists are here to help you out. Get a proper
