--- a/index.html
+++ b/index.html
@@ -906,7 +906,7 @@
                                                 <li>Seamless care</li>
                                                 <li>Unparalleled expertise</li>
                                             </ul>
-                                            <a class="btn btn-md btn-gradient" href="#"><i
+                                            <a class="btn btn-md btn-gradient" href="contact.html"><i
                                                     class="fas fa-angle-right"></i> Book An Appoinment</a>
                                         </div>
                                     </div>
@@ -1153,7 +1153,7 @@
                         <div class="item">
                             <div class="info">
                                 <h4>
-                                    <a style="font-size: 18px;" href="#">Comprehensive <br> Pediatric Services</a>
+                                    <a style="font-size: 18px;" >Comprehensive <br> Pediatric Services</a>
                                 </h4>
                                 <div class="icon">
                                     <i><img src="assets/img/thumb/icon-40.png" alt="" width="50px"></i>
@@ -1171,7 +1171,7 @@
                         <div class="item">
                             <div class="info">
                                 <h4>
-                                    <a style="font-size: 18px;" href="#">Personalized <br> Care
+                                    <a style="font-size: 18px;" >Personalized <br> Care
                                     </a>
                                 </h4>
                                 <div class="icon">
@@ -1190,7 +1190,7 @@
                         <div class="item">
                             <div class="info">
                                 <h4>
-                                    <a style="font-size: 18px;" href="#">State-of-the-Art <br> Facilities
+                                    <a style="font-size: 18px;">State-of-the-Art <br> Facilities
                                     </a>
                                 </h4>
                                 <div class="icon">
