--- a/about-us.html
+++ b/about-us.html
@@ -165,7 +165,7 @@
                         <div class="item">
                             <div class="info">
                                 <h4>
-                                    <a style="font-size: 18px;" href="#">Our Mission</a>
+                                    <a style="font-size: 18px;" >Our Mission</a>
                                 </h4>
                                 <div class="icon">
                                     <i><img src="assets/img/thumb/icon-43.png" alt="" width="40px"></i>
@@ -184,7 +184,7 @@
                         <div class="item">
                             <div class="info">
                                 <h4>
-                                    <a style="font-size: 18px;" href="#">Vision</a>
+                                    <a style="font-size: 18px;" >Vision</a>
                                 </h4>
                                 <div class="icon">
                                     <i><img src="assets/img/thumb/icon-44.png" alt="" width="40px"></i>
@@ -204,7 +204,7 @@
                         <div class="item">
                             <div class="info">
                                 <h4>
-                                    <a style="font-size: 18px;" href="#">Opportunity
+                                    <a style="font-size: 18px;" >Opportunity
                                     </a>
                                 </h4>
                                 <div class="icon">
