--- a/index.html
+++ b/index.html
@@ -1135,7 +1135,7 @@
                         <div class="item">
                             <div class="info">
                                 <h4>
-                                    <a style="font-size: 18px;" href="#">Experienced <br> Team</a>
+                                    <a style="font-size: 18px;" >Experienced <br> Team</a>
                                 </h4>
                                 <div class="icon">
                                     <i><img src="assets/img/thumb/icon-39.png" alt="" width="50px"></i>
