--- a/departments.html
+++ b/departments.html
@@ -191,7 +191,7 @@
                             <div class="info">
                                 <div class="title">
                                     <!-- <i class="flaticon-paramedic"></i> -->
-                                    <h4><a href="#" >Pediatric Ophthalmology</a></h4>
+                                    <h4><a  >Pediatric Ophthalmology</a></h4>
                                 </div>
                                 <p>
                                     Early Detection of eye problem in children is very essential.Occular problems in children can hamper their day to day activities,learning and education,School and in severe cases they may lead to permanent eye damage. Hence we at Child Central clinics offer a wide range of services to diagnose and treat eye problem . Children such as eye testing ,diagnosis and treatment of any eye problems,prescription of glasses and contact lenses. 
@@ -209,7 +209,7 @@
                             <div class="info">
                                 <div class="title">
                                     <!-- <i class="flaticon-broken-bone"></i> -->
-                                    <h4><a href="#" class="p-4">Pediatric Nutrition</a></h4>
+                                    <h4><a  class="p-4">Pediatric Nutrition</a></h4>
                                 </div>
                                 <p>
                                     You are what you Eat. At Child Central clinic we assess your child for nutritional status and any nutritional risks.Based on the parameters we devise and give you dietary plans that will help resolve nutritional issues in your child.We also guide children with food allergies.We help with newborn feeding,lactational problems and pediatric eating disorders.  
@@ -227,7 +227,7 @@
                             <div class="info">
                                 <div class="title">
                                     <!-- <i class="flaticon-kidneys"></i> -->
-                                    <h4><a href="#" >Pediatric Surgery</a></h4>
+                                    <h4><a  >Pediatric Surgery</a></h4>
                                 </div>
                                 <p>
                                     Our Pediatric Surgery department consults and guides on various pediatric surgical conditions such as congenital anomalies,pediatric urology,pediatric neurosurgery, pediatric,neonatal surgery,pediatric GI surgery. 
@@ -245,7 +245,7 @@
                             <div class="info">
                                 <div class="title">
                                     <!-- <i class="flaticon-samples"></i> -->
-                                    <h4><a href="#">⁠Pediatric Dermatology</a></h4>
+                                    <h4><a >⁠Pediatric Dermatology</a></h4>
                                 </div>
                                 <p>
                                     Our dermatologist at Child central Clinic diagnose and treat skin problems diseases in children of all age groups.Our doctors use their expertise in systematic evaluation of your child’s skin problem and guide you on the management of the skin condition 
@@ -261,7 +261,7 @@
                             <div class="info">
                                 <div class="title">
                                     <!-- <i class="flaticon-samples"></i> -->
-                                    <h4><a href="#">Speech Therapy And Audiology</a></h4>
+                                    <h4><a >Speech Therapy And Audiology</a></h4>
                                 </div>
                                 <p>
                                     Pediatric speech and language therapy is to enhance children's communication skills, in both verbal and nonverbal aspects in children with language and speech issues .These issues can often coincide with mental or behavioral conditions, such as anxiety or attention-deficit/hyperactivity 
@@ -287,7 +287,7 @@
                             <div class="info">
                                 <div class="title">
                                     <!-- <i class="flaticon-samples"></i> -->
-                                    <h4><a href="#">⁠Clinical Psychologist</a></h4>
+                                    <h4><a >⁠Clinical Psychologist</a></h4>
                                 </div>
                                 <p>
                                     Psychological disturbances in children if not addressed in the right time and in the proper way can lead to bigger issues in adult life.Hence our psychologist at Child Central Clinic specialize in assessment and evaluation of children with psychological disturbances. We offer behavioural modification techniques and help in their treatment
@@ -304,7 +304,7 @@
                             <div class="info">
                                 <div class="title">
                                     <!-- <i class="flaticon-samples"></i> -->
-                                    <h4><a href="#">⁠Lab</a></h4>
+                                    <h4><a >⁠Lab</a></h4>
                                 </div>
                                 <p>
                                     At child central clinic we deliver accurate and timely reports of lab tests and are committed towards precise diagnosis of peditaric diseases and illnesses
@@ -321,7 +321,7 @@
                             <div class="info">
                                 <div class="title">
                                     <!-- <i class="flaticon-samples"></i> -->
-                                    <h4><a href="#">Pharmacy</a></h4>
+                                    <h4><a >Pharmacy</a></h4>
                                 </div>
                                 <p>
                                     Medicines,vaccines and health supplements for children are available at Child Central Pharmacy to ensure good health and recovery of your child.
@@ -338,7 +338,7 @@
                             <div class="info">
                                 <div class="title">
                                     <!-- <i class="flaticon-samples"></i> -->
-                                    <h4><a href="#">Allergy And Asthma Testing</a></h4>
+                                    <h4><a >Allergy And Asthma Testing</a></h4>
                                 </div>
                                 <p>
                                     Allergy and asthma testing helps identify specific triggers like pollen, dust, or pet dander, allowing for personalized treatment plans. Proper diagnosis and management can significantly improve symptoms and enhance your quality of life.
@@ -355,7 +355,7 @@
                             <div class="info">
                                 <div class="title">
                                     <!-- <i class="flaticon-samples"></i> -->
-                                    <h4><a href="#">
+                                    <h4><a >
                                         ⁠Eye Testing</a></h4>
                                 </div>
                                 <p>
@@ -373,7 +373,7 @@
                             <div class="info">
                                 <div class="title">
                                     <!-- <i class="flaticon-samples"></i> -->
-                                    <h4><a href="#">
+                                    <h4><a >
                                         ⁠Pediatric Health Check Up</a></h4>
                                 </div>
                                 <p>
@@ -391,7 +391,7 @@
                             <div class="info">
                                 <div class="title">
                                     <!-- <i class="flaticon-samples"></i> -->
-                                    <h4><a href="#">
+                                    <h4><a >
                                         
 ⁠Workshops</a></h4>
                                 </div>
